# notochord

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
reference/notochord/__init__/: index.html
reference/notochord/app/__init__/: index.html
reference/notochord/app/harmonizer/: index.html
reference/notochord/app/homunculus/: index.html
reference/notochord/app/improviser/: index.html
reference/notochord/app/improviser-txala/: index.html
reference/notochord/app/morse/: index.html
reference/notochord/app/prompt/: index.html
reference/notochord/app/server/: index.html
reference/notochord/app/simple_harmonizer/: index.html
reference/notochord/app/txalaparta/: index.html
reference/notochord/data/: index.html
reference/notochord/distributions/: index.html
reference/notochord/event/: index.html
reference/notochord/lakh_prep/: index.html
reference/notochord/model/: index.html
reference/notochord/perform/: index.html
reference/notochord/rnn/: index.html
reference/notochord/train/: index.html
reference/notochord/util/: index.html
scripts/: lakh_prep.py
search/: search_index.json
src/notochord/: __main__.py  data.py  distributions.py  event.py  lakh_prep.py  model.py  perform.py  train.py  util.py
src/notochord/app/: __init__.py  harmonizer.py  homunculus.css  homunculus.py  homunculus.toml  improviser.py  morse.py  preset.json  prompt.py  server.py  simple_harmonizer.py  txalaparta.py
