[tool.poetry]
name = "notochord"
version = "0.5.5"
description = "Notochord is a real-time neural network model for MIDI performances."
authors = ["Victor Shepardson <victor.shepardson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=1.13,<2.3"
numpy = "^1.23"
pandas = "^2.0"
tqdm = "^4.64"
sf2utils = "^0.9"
appdirs = "^1.4.4"
iipyper = "^0.1.5"
toml-file = "^1.0.5"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notochord = 'notochord.__main__:_main'
