[tool.poetry]
name = "notochord"
version = "0.6.2"
description = "Notochord is a real-time neural network model for MIDI performances."
authors = ["Victor Shepardson <victor.shepardson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = ">=1.13,<2.7"
numpy = ">=1.23,<3"
pandas = "^2.0"
tqdm = "^4.64"
audioop-lts = { version = "*", markers = "python_version >= '3.13'" }
sf2utils = "^1.0.0"
appdirs = "^1.4.4"
iipyper = "~0.3.0"
toml-file = "^1.0.5"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^0.5.0"

[tool.poetry.group.morse.dependencies]
transformers = "~4.39"

[tool.poetry.group.train.dependencies]
tensorboard = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notochord = 'notochord.__main__:_main'
