[project]
name = "notochord"
version = "0.8.0"
description = "Notochord is a real-time neural network model for MIDI performances."
authors = [{name="Victor Shepardson", email="victor.shepardson@gmail.com"}]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=1.13,<2.11",
    "numpy>=1.23,<3",
    "pandas>=2.0.0,<3",
    "tqdm>=4.64,<5",
    "audioop-lts ; python_version >= '3.13'",
    "sf2utils>=1.0.0,<2",
    "appdirs>=1.4.4,<2",
    "toml-file>=1.0.5,<2",
    "joblib>=1.4.2,<2",
    "iipyper>=0.5.0,<0.6"
    ]
    # "iipyper"]
# [tool.uv.sources]
# iipyper = { path = "../iipyper", editable = true }
# iipyper = { index = "testpypi" }

[project.urls]
repository = "https://github.com/Intelligent-Instruments-Lab/notochord"
documentation = "https://intelligent-instruments-lab.github.io/notochord/"

# optional deps
[dependency-groups]
morse = ["transformers>=4.39,<5"]
train = ["tensorboard>=2.17.1,<3"]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "mkdocs>=1.5.3,<2.0.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=6.0.4",
    "mkdocs-material>=9.4.8",
    "mkdocs-material-extensions>=1.3",
    "mkdocs-autorefs>=0.5.0",
]

[project.scripts]
notochord = "notochord.__main__:_main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"
